--- a/robo-eye/detection/dataset.yaml
+++ b/robo-eye/detection/dataset.yaml
@@ -1,9 +1,7 @@
-path: /home/gregory/dtu/pfas/pfas_project/robo-eye/datasets/seq_01 # dataset root dir
+path: /zhome/a2/c/213547/robo-eye/datasets/combo # dataset root dir
 train: train/images # train images (relative to 'path')
 val: validation/images # val images (relative to 'path')
-#test: # test images (optional)
+test: test/images # test images (optional)
 
-names:
-    0: Pedestrian
-    1: Cyclist
-    2: Car
+nc: 3
+names: ['Pedestrian', 'Cyclist', 'Car']
